# streamduck

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  Readme.md  streamduck-sharp.sln  why-dotnet.md
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust.yml
ElgatoStreamDeck/: ConcurrentDevice.cs  Device.cs  DeviceManager.cs  DeviceReader.cs  ElgatoStreamDeck.csproj  IDevice.cs  ImageMode.cs  ImageUtils.cs  Input.cs  Kind.cs  SafeHidHandle.cs
ElgatoStreamDeck/Inputs/: ButtonStateChange.cs  EncoderStateChange.cs  EncoderTwist.cs  Input.cs  TouchScreenLongPress.cs  TouchScreenPress.cs  TouchScreenSwipe.cs
Streamduck/: App.cs  Program.cs  Streamduck.csproj  UIApp.axaml  UIApp.axaml.cs  ViewLocator.cs
Streamduck/BaseFunctionality/: CorePlugin.cs
Streamduck/Configuration/: Config.cs  DeviceConfig.cs  GlobalConfig.cs
Streamduck/Constants/: EventNames.cs
Streamduck/Cores/: CoreImpl.cs  ScreenImpl.cs
Streamduck/Definitions/: CoreImpl.cs
Streamduck/Devices/: NamespacedDeviceIdentifier.cs  NamespacedName.cs
Streamduck/Fields/: Field.cs  FieldReflector.cs
Streamduck/Plugins/: AggregatedPlugin.cs  NamespacedName.cs  PluginAssembly.cs  PluginCollection.cs  PluginReflector.cs  ReflectedAction.cs  ReflectedFunction.cs  WrappedDriver.cs  WrappedPlugin.cs
Streamduck/Socket/: Server.cs  SessionRequester.cs
Streamduck/UI/: AppViewLocator.cs  DesignData.cs  GridHelper.cs  MainWindow.axaml  MainWindow.axaml.cs
StreamduckCore/: CorePlugin.cs  StreamduckCore.csproj
StreamduckCore/Renderers/: DefaultRenderer.cs
StreamduckCore/Triggers/: ButtonDownTrigger.cs
StreamduckGS/: Class1.cs  StreamduckGS.csproj
StreamduckGS/Parser/: gs.g4
StreamduckShared/: IStreamduck.cs  StreamduckShared.csproj
StreamduckShared/Actions/: ActionInstance.cs  PluginAction.cs
StreamduckShared/Api/: Core.cs  IConfigurable.cs  INamed.cs
StreamduckShared/Attributes/: AutoAddAttribute.cs  BitmaskAttribute.cs  CustomAttribute.cs  DescriptionAttribute.cs  HeaderAttribute.cs  IgnoreAttribute.cs  IncludeAttribute.cs  NameAttribute.cs  NumberFieldAttribute.cs  PluginMethodAttribute.cs  ReadOnlyAttribute.cs  StaticTextAttribute.cs  SwitchAttribute.cs
StreamduckShared/Cores/: Core.cs  Screen.cs  ScreenItem.cs
StreamduckShared/Data/: Double2.cs  Int2.cs  Namespaced.cs  UInt2.cs
StreamduckShared/Default/: DefaultRenderer.cs  DefaultScreen.cs  DefaultScreenItem.cs
StreamduckShared/Definitions/: Double2.cs  Int2.cs  UInt2.cs
StreamduckShared/Devices/: Device.cs  DeviceDisconnectedException.cs  DeviceIdentifier.cs  DeviceMetadata.cs  IDevicePoolable.cs  NamespacedDeviceIdentifier.cs
StreamduckShared/Fields/: Field.cs  FieldReflector.cs
StreamduckShared/Images/: IImageCollection.cs  ImageExtensions.cs
StreamduckShared/Inputs/: IInputButton.cs  IInputDisplay.cs  IInputEncoder.cs  Input.cs  (+8 more)
StreamduckStreamDeck/: StreamDeckDevice.cs  StreamDeckDeviceOptions.cs  StreamDeckDriver.cs  StreamDeckPlugin.cs  StreamduckStreamDeck.csproj
StreamduckTest/: FieldReflectorTest.cs  FieldsTest.cs  PluginCollectionTest.cs  PluginReflectorTest.cs  ScriptingTest.cs  StreamduckTest.csproj  Usings.cs
plugins/: StreamduckStreamDeck
sh/: 40-streamdeck.rules
streamduck/: App.cs  Program.cs  streamduck.csproj
streamduck-actions/: Cargo.toml
streamduck-actions/src/: key_sequence.rs  lib.rs  run_command.rs
streamduck-cli/: Cargo.toml
streamduck-cli/src/: helps.rs  main.rs
streamduck-cli/src/prompt/: buttons.rs  config.rs  device.rs  helper.rs  images.rs  info.rs  mod.rs  module.rs  utils.rs
streamduck-client/: Cargo.toml
streamduck-client/src/: lib.rs  unix.rs  util.rs  windows.rs
streamduck-core/: Cargo.toml
streamduck-core-derive/: Cargo.toml
streamduck-core-derive/src/: lib.rs
streamduck-core/src/: bundle.rs  config.rs  data.rs  images.rs  lib.rs  macros.rs  util.rs  versions.rs
streamduck-core/src/config/: device.rs  device_config.rs  global_config.rs  mod.rs
streamduck-core/src/core/: actions.rs  button.rs  manager.rs  methods.rs  mod.rs  overlays.rs  thread.rs
streamduck-core/src/data/: mod.rs
streamduck-core/src/device/: driver.rs  input.rs  metadata.rs  mod.rs
streamduck-core/src/devices/: buttons.rs  images.rs  metadata.rs  mod.rs
streamduck-core/src/devices/drivers/: mod.rs
streamduck-core/src/event/: dispatcher.rs  mod.rs
streamduck-core/src/events/: listeners.rs  mod.rs  util.rs
streamduck-core/src/font/: mod.rs
streamduck-core/src/images/: mod.rs
streamduck-core/src/localization/: mod.rs
streamduck-core/src/modules/: actions.rs  components.rs  core_module.rs  events.rs  folders.rs  mod.rs  plugins.rs
streamduck-core/src/parameters/: mod.rs
streamduck-core/src/plugin/: builder.rs  mod.rs
streamduck-core/src/socket/: mod.rs
streamduck-core/src/tests/: drivers.rs  lib.rs  localization.rs  mod.rs  parameters.rs
streamduck-core/src/thread/: mod.rs  util.rs
streamduck-core/src/thread/rendering/: component_values.rs  custom.rs  mod.rs
streamduck-core/src/threads/: mod.rs  rendering.rs  streamdeck.rs
streamduck-core/src/trigger/: mod.rs
streamduck-core/src/ui/: builder.rs  mod.rs
streamduck-core/src/util/: mod.rs  rendering.rs
streamduck-daemon/: Cargo.toml  build.rs
streamduck-daemon/src/: config.rs  core_manager.rs  daemon_data.rs  lib.rs  main.rs  modules.rs  plugins.rs  streamdeck.rs
streamduck-daemon/src/daemon_data/: assets.rs  buttons.rs  config.rs  devices.rs  mod.rs  modules.rs  ops.rs  panels.rs
streamduck-daemon/src/debugs/: mod.rs
streamduck-daemon/src/drivers/: mod.rs  streamdeck.rs
streamduck-daemon/src/socket/: daemon_data.rs  mod.rs
streamduck-daemon/src/unix/: mod.rs
streamduck-daemon/src/windows/: mod.rs
streamduck-daemon/wix/: MyExitDialog.wxs  WixUI_Custom.wxs  main.wxs
streamduck-derive/: Cargo.toml
streamduck-derive/src/: lib.rs
streamduck-derive/src/parameters/: constants.rs  mod.rs
streamduck-module-example/: Cargo.toml
streamduck-module-example/src/: lib.rs
streamduck-plugin/: Cargo.toml
test-rust-plugin/: Cargo.toml
(+142 files in other folders)
