[package]
name = "streamduck-actions"
authors = ["TheJebForge"]
version = "0.0.8"
description = "Actions module for Streamduck project"
edition = "2021"
readme = "../Readme.md"
license-file = "../LICENSE"
repository = "https://github.com/TheJebForge/streamduck"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
streamduck-core = {path = "../streamduck-core", version = "0.0.8"}
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.69"
log = "0.4"
enigo = { version = "0.0.14", features = ["with_serde"] }