[package]
name = "streamduck-cli"
authors = ["TheJebForge"]
version = "0.0.1"
description = "CLI client of the Streamduck project"
edition = "2021"
readme = "../Readme.md"
license-file = "../LICENSE"
repository = "https://github.com/TheJebForge/streamduck"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
streamduck-client = { path = "../streamduck-client", version = "0.0.2" }