[package]
name = "streamduck-cli"
authors = ["TheJebForge"]
version = "0.0.4"
description = "CLI client of the Streamduck project"
edition = "2021"
readme = "../Readme.md"
license-file = "../LICENSE"
repository = "https://github.com/TheJebForge/streamduck"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
streamduck-core = {path = "../streamduck-core", version = "0.0.4"}
streamduck-client = { path = "../streamduck-client", version = "0.0.4" }