[package]
name = "streamduck-cli"
authors = ["TheJebForge"]
version = "0.1.3"
description = "CLI client of the Streamduck project"
edition = "2021"
readme = "../Readme.md"
license-file = "../LICENSE"
repository = "https://github.com/streamduck-org/streamduck"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
streamduck-core = {path = "../streamduck-core", version = "0.1.3"}
streamduck-client = { path = "../streamduck-client", version = "0.1.3" }
base64 = "0.13.0"
unicode-segmentation = "1.9.0"
termimage = "1.2.0"
image = "0.24"
rustyline = "9.1.2"
itertools = "0.10.3"