[package]
name = "streamduck-client"
authors = ["TheJebForge"]
version = "0.2.0"
description = "Client library of the Streamduck project"
edition = "2021"
readme = "../Readme.md"
license-file = "../LICENSE"
repository = "https://github.com/streamduck-org/streamduck"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
streamduck-core = {path = "../streamduck-core", version = "0.2.0" }
streamduck-daemon = { path = "../streamduck-daemon", version = "0.2.0" }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.69"
log = "0.4"
rand = "0.8.4"

[target.'cfg(windows)'.dependencies]
named_pipe = "0.4.1"