[package]
name = "streamduck-core-derive"
authors = ["TheJebForge"]
version = "0.0.1"
description = "Derive macros for the Streamduck project"
edition = "2021"
readme = "../Readme.md"
license-file = "../LICENSE"
repository = "https://github.com/TheJebForge/streamduck"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true