[package]
name = "streamduck-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = [ "full" ] }
serde = { version = "1.0.158", features = [ "derive" ] }
serde_json = "1.0.94"
async-trait = "0.1.68"