[package]
name = "streamduck-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scc = "1.8"
futures = "0.3"
tokio = { version = "1", features = [ "full" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
rmp-serde = "1.1"
rmpv = { version = "1", features = [ "with-serde" ] }
async-trait = "0.1"
async-recursion = "1.0"
image = "0.24"
tracing = "0.1"
directories = "5"
arc-swap = "1.6"
sha2 = "0.10"