[package]
name = "streamduck-daemon"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "streamduck"
path = "src/main.rs"

[dependencies]
streamduck-core = { path = "../streamduck-core", version = "0.3.0" }

serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

elgato-streamdeck = { version = "0.2.2", features = ["async"] }
hidapi = "1.4.2"