[package]
name = "streamduck-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
streamduck-core = { path = "../streamduck-core" }
hidapi = "2.2"
elgato-streamdeck = { version = "0.4", features = [ "async" ] }
tokio = { version = "1", features = [ "full" ] }
libloading = "0.8.0"
rmp-serde = "1.1"
rmpv = { version = "1", features = [ "with-serde" ] }
base64 = "0.21"
async-trait = "0.1"