[package]
name = "streamduck-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.47"
syn = "1.0.105"
quote = "1.0.21"

[dev-dependencies]
streamduck-core = { path = "../streamduck-core", version = "0.3.0" }