[package]
name = "streamduck-module-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
streamduck-core = {path = "../streamduck-core", version = "0.1.8"}
streamduck-core-derive = {path = "../streamduck-core-derive", version = "0.0.1"}
streamduck-daemon = {path = "../streamduck-daemon", version = "0.1.8"}

serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.69"